java命令以及堆栈信息补充