@@ -60,3 +60,300 @@ public class Main {
     }
 }
 ```
+
+
+# JVM数据监控
+ManagementFactory
+```java
+package com.fei;
+ 
+import java.lang.management.ClassLoadingMXBean;
+import java.lang.management.CompilationMXBean;
+import java.lang.management.GarbageCollectorMXBean;
+import java.lang.management.ManagementFactory;
+import java.lang.management.MemoryMXBean;
+import java.lang.management.MemoryManagerMXBean;
+import java.lang.management.MemoryPoolMXBean;
+import java.lang.management.MemoryUsage;
+import java.lang.management.OperatingSystemMXBean;
+import java.lang.management.RuntimeMXBean;
+import java.lang.management.ThreadInfo;
+import java.lang.management.ThreadMXBean;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.util.Arrays;
+import java.util.List;
+ 
+public class JvmInfo {
+ 
+	static final long MB = 1024 * 1024;
+	
+	public static void main(String[] args) {
+		
+				
+		//打印系统信息
+		System.out.println("===========打印系统信息==========");
+		printOperatingSystemInfo();
+		//打印编译信息
+		System.out.println("===========打印编译信息==========");
+		printCompilationInfo();
+		//打印类加载信息
+		System.out.println("===========打印类加载信息==========");
+		printClassLoadingInfo();
+		//打印运行时信息
+		System.out.println("===========打印运行时信息==========");
+		printRuntimeInfo();
+		//打印内存管理器信息
+		System.out.println("===========打印内存管理器信息==========");
+		printMemoryManagerInfo();
+		//打印垃圾回收信息
+		System.out.println("===========打印垃圾回收信息==========");
+		printGarbageCollectorInfo();
+		//打印vm内存
+		System.out.println("===========打印vm内存信息==========");
+		printMemoryInfo();
+		//打印vm各内存区信息
+		System.out.println("===========打印vm各内存区信息==========");
+		printMemoryPoolInfo();
+		//打印线程信息
+		System.out.println("===========打印线程==========");
+		printThreadInfo();
+		
+	}
+	
+	
+	private static void printOperatingSystemInfo(){
+		OperatingSystemMXBean system = ManagementFactory.getOperatingSystemMXBean();
+		//相当于System.getProperty("os.name").
+		System.out.println("系统名称:"+system.getName());
+		//相当于System.getProperty("os.version").
+		System.out.println("系统版本:"+system.getVersion());
+		//相当于System.getProperty("os.arch").
+		System.out.println("操作系统的架构:"+system.getArch());
+		//相当于 Runtime.availableProcessors()
+		System.out.println("可用的内核数:"+system.getAvailableProcessors());
+		
+		if(isSunOsMBean(system)){
+			long totalPhysicalMemory = getLongFromOperatingSystem(system,"getTotalPhysicalMemorySize");
+			long freePhysicalMemory = getLongFromOperatingSystem(system, "getFreePhysicalMemorySize");
+			long usedPhysicalMemorySize =totalPhysicalMemory - freePhysicalMemory;
+			
+			System.out.println("总物理内存(M):"+totalPhysicalMemory/MB);
+			System.out.println("已用物理内存(M):"+usedPhysicalMemorySize/MB);
+			System.out.println("剩余物理内存(M):"+freePhysicalMemory/MB);
+			
+			long  totalSwapSpaceSize = getLongFromOperatingSystem(system, "getTotalSwapSpaceSize");
+			long freeSwapSpaceSize = getLongFromOperatingSystem(system, "getFreeSwapSpaceSize");
+			long usedSwapSpaceSize = totalSwapSpaceSize - freeSwapSpaceSize;
+			
+			System.out.println("总交换空间(M):"+totalSwapSpaceSize/MB);
+			System.out.println("已用交换空间(M):"+usedSwapSpaceSize/MB);
+			System.out.println("剩余交换空间(M):"+freeSwapSpaceSize/MB);
+		}
+	}
+	
+	private static long getLongFromOperatingSystem(OperatingSystemMXBean operatingSystem, String methodName) {
+		try {
+			final Method method = operatingSystem.getClass().getMethod(methodName,
+					(Class<?>[]) null);
+			method.setAccessible(true);
+			return (Long) method.invoke(operatingSystem, (Object[]) null);
+		} catch (final InvocationTargetException e) {
+			if (e.getCause() instanceof Error) {
+				throw (Error) e.getCause();
+			} else if (e.getCause() instanceof RuntimeException) {
+				throw (RuntimeException) e.getCause();
+			}
+			throw new IllegalStateException(e.getCause());
+		} catch (final NoSuchMethodException e) {
+			throw new IllegalArgumentException(e);
+		} catch (final IllegalAccessException e) {
+			throw new IllegalStateException(e);
+		}
+	}
+ 
+	private static void printCompilationInfo(){
+		CompilationMXBean compilation = ManagementFactory.getCompilationMXBean();
+		System.out.println("JIT编译器名称："+compilation.getName());
+		//判断jvm是否支持编译时间的监控
+		if(compilation.isCompilationTimeMonitoringSupported()){
+			System.out.println("总编译时间："+compilation.getTotalCompilationTime()+"秒");
+		}
+	}
+	
+	private static void printClassLoadingInfo(){
+		ClassLoadingMXBean classLoad= ManagementFactory.getClassLoadingMXBean();
+		System.out.println("已加载类总数："+classLoad.getTotalLoadedClassCount());
+		System.out.println("已加载当前类："+classLoad.getLoadedClassCount());
+		System.out.println("已卸载类总数："+classLoad.getUnloadedClassCount());
+		
+	}
+	
+	private static void printRuntimeInfo(){
+		RuntimeMXBean runtime = ManagementFactory.getRuntimeMXBean();
+		System.out.println("进程PID="+runtime.getName().split("@")[0]);
+		System.out.println("jvm规范名称:"+runtime.getSpecName());
+		System.out.println("jvm规范运营商:"+runtime.getSpecVendor());
+		System.out.println("jvm规范版本:"+runtime.getSpecVersion());
+		//返回虚拟机在毫秒内的开始时间。该方法返回了虚拟机启动时的近似时间
+		System.out.println("jvm启动时间（毫秒）:"+runtime.getStartTime());
+		//相当于System.getProperties
+		System.out.println("获取System.properties:"+runtime.getSystemProperties());
+		System.out.println("jvm正常运行时间（毫秒）:"+runtime.getUptime());
+		//相当于System.getProperty("java.vm.name").
+		System.out.println("jvm名称:"+runtime.getVmName());
+		//相当于System.getProperty("java.vm.vendor").
+		System.out.println("jvm运营商:"+runtime.getVmVendor());
+		//相当于System.getProperty("java.vm.version").
+		System.out.println("jvm实现版本:"+runtime.getVmVersion());
+		List<String> args = runtime.getInputArguments();
+		if(args != null && !args.isEmpty()){
+			System.out.println("vm参数:");
+			for(String arg : args){
+				System.out.println(arg);
+			}
+		}
+		System.out.println("类路径:"+runtime.getClassPath());
+		System.out.println("引导类路径:"+runtime.getBootClassPath());
+		System.out.println("库路径:"+runtime.getLibraryPath());
+	}
+	
+	private static void printMemoryManagerInfo(){
+		List<MemoryManagerMXBean> managers = ManagementFactory.getMemoryManagerMXBeans();
+		if(managers != null && !managers.isEmpty()){
+			for(MemoryManagerMXBean manager : managers){
+				System.out.println("vm内存管理器：名称="+manager.getName()+",管理的内存区="
+			+Arrays.deepToString(manager.getMemoryPoolNames())+",ObjectName="+manager.getObjectName());
+			}
+		}
+	}
+	
+	private static void printGarbageCollectorInfo(){
+		List<GarbageCollectorMXBean> garbages = ManagementFactory.getGarbageCollectorMXBeans();
+		for(GarbageCollectorMXBean garbage : garbages){
+			System.out.println("垃圾收集器：名称="+garbage.getName()+",收集="+garbage.getCollectionCount()+",总花费时间="
+		+garbage.getCollectionTime()+",内存区名称="+Arrays.deepToString(garbage.getMemoryPoolNames()));
+		}
+	}
+	
+	private static void printMemoryInfo(){
+		MemoryMXBean memory = ManagementFactory.getMemoryMXBean();
+		MemoryUsage headMemory = memory.getHeapMemoryUsage();
+		System.out.println("head堆:");
+		System.out.println("\t初始(M):"+headMemory.getInit()/MB);
+		System.out.println("\t最大(上限)(M):"+headMemory.getMax()/MB);
+		System.out.println("\t当前(已使用)(M):"+headMemory.getUsed()/MB);
+		System.out.println("\t提交的内存(已申请)(M):"+headMemory.getCommitted()/MB);
+		System.out.println("\t使用率:"+headMemory.getUsed()*100/headMemory.getCommitted()+"%");
+		
+		System.out.println("non-head非堆:");
+		MemoryUsage nonheadMemory = memory.getNonHeapMemoryUsage();
+		System.out.println("\t初始(M):"+nonheadMemory.getInit()/MB);
+		System.out.println("\t最大(上限)(M):"+nonheadMemory.getMax()/MB);
+		System.out.println("\t当前(已使用)(M):"+nonheadMemory.getUsed()/MB);
+		System.out.println("\t提交的内存(已申请)(M):"+nonheadMemory.getCommitted()/MB);
+		System.out.println("\t使用率:"+nonheadMemory.getUsed()*100/nonheadMemory.getCommitted()+"%");
+	}
+	
+	private static void printMemoryPoolInfo(){
+		List<MemoryPoolMXBean> pools = ManagementFactory.getMemoryPoolMXBeans();
+		if(pools != null && !pools.isEmpty()){
+			for(MemoryPoolMXBean pool : pools){
+				//只打印一些各个内存区都有的属性，一些区的特殊属性，可看文档或百度
+				//最大值，初始值，如果没有定义的话，返回-1，所以真正使用时，要注意
+				System.out.println("vm内存区:\n\t名称="+pool.getName()+"\n\t所属内存管理者="+Arrays.deepToString(pool.getMemoryManagerNames())
+						+"\n\t ObjectName="+pool.getObjectName()+"\n\t初始大小(M)="+pool.getUsage().getInit()/MB
+						+"\n\t最大(上限)(M)="+pool.getUsage().getMax()/MB
+						+"\n\t已用大小(M)="+pool.getUsage().getUsed()/MB
+						+"\n\t已提交(已申请)(M)="+pool.getUsage().getCommitted()/MB
+						+"\n\t使用率="+(pool.getUsage().getUsed()*100/pool.getUsage().getCommitted())+"%");
+			
+			}
+		}
+	}
+	
+	private static void printThreadInfo(){
+		ThreadMXBean thread = ManagementFactory.getThreadMXBean();
+		System.out.println("ObjectName="+thread.getObjectName());
+		System.out.println("仍活动的线程总数="+thread.getThreadCount());
+		System.out.println("峰值="+thread.getPeakThreadCount());
+		System.out.println("线程总数（被创建并执行过的线程总数）="+thread.getTotalStartedThreadCount());
+		System.out.println("当初仍活动的守护线程（daemonThread）总数="+thread.getDaemonThreadCount());
+		
+		//检查是否有死锁的线程存在
+		long[] deadlockedIds =  thread.findDeadlockedThreads();
+		if(deadlockedIds != null && deadlockedIds.length > 0){
+			ThreadInfo[] deadlockInfos = thread.getThreadInfo(deadlockedIds);
+			System.out.println("死锁线程信息:");
+			System.out.println("\t\t线程名称\t\t状态\t\t");
+			for(ThreadInfo deadlockInfo : deadlockInfos){
+				System.out.println("\t\t"+deadlockInfo.getThreadName()+"\t\t"+deadlockInfo.getThreadState()
+						+"\t\t"+deadlockInfo.getBlockedTime()+"\t\t"+deadlockInfo.getWaitedTime()
+						+"\t\t"+deadlockInfo.getStackTrace().toString());
+			}
+		}
+		long[] threadIds = thread.getAllThreadIds();
+		if(threadIds != null && threadIds.length > 0){
+			ThreadInfo[] threadInfos = thread.getThreadInfo(threadIds);
+			System.out.println("所有线程信息:");
+			System.out.println("\t\t线程名称\t\t\t\t\t状态\t\t\t\t\t线程id");
+			for(ThreadInfo threadInfo : threadInfos){
+				System.out.println("\t\t"+threadInfo.getThreadName()+"\t\t\t\t\t"+threadInfo.getThreadState()
+						+"\t\t\t\t\t"+threadInfo.getThreadId());
+			}
+		}
+		
+	}
+	
+	private static boolean isSunOsMBean(OperatingSystemMXBean operatingSystem) {
+		final String className = operatingSystem.getClass().getName();
+		return "com.sun.management.OperatingSystem".equals(className)
+				|| "com.sun.management.UnixOperatingSystem".equals(className);
+	}
+}
+
+```
+
+# 堆 非堆 栈
+## 堆<->栈
+1.Heap Memory是堆内存，Stack Memory是栈内存。
+2.Stack memory内存空间由操作系统自动分配和释放，Heap Memory内存空间手动申请和释放的，Heap Memory内存常用new关键字来分配。
+3.Stack Memory内存空间有限，Heap Memor的空间是很大的自由区几乎没有空间限制。
+在Java中，声明的对象是先在栈内存中为其分配地址空间，在对其进行实例化后则在堆内存中为其分配地址。
+* Person p = null ; 只在Stack Memory中为其分配地址空间
+* p = new Person(); 则在Heap Memory中为其分配内存地址
+
+在函数中定义的一些基本类型的变量和对象的引用变量都是在函数的栈内存中分配，当在一段代码块定义一个变量时，Java就在栈中为这个变量分配内存空间，当超过变量的作用域后，Java 会自动释放掉为该变量分配的内存空间，该内存空间可以立即被另作它用
+
+堆内存用来存放由 new 创建的对象和数组，在堆中分配的内存，由 Java 虚拟机的自动垃圾回收器来管理。在堆中产生了一个数组或者对象之后，还可以在栈中定义一个特殊的变量，让栈中的这个变量的取值等于数组或对象在堆内存中的首地址，栈中的这个变量就成了数组或对象的引用变量，以后就可以在程序中使用栈中的引用变量来访问堆中的数组或者对象，引用变量就相当于是为数组或者对象起的一个名称。引用变量是普通的变量，定义时在栈中分配，引用变量在程序运行到其作用域之外后被释放。而数组和对象本身在堆中分配，即使程序运行到使用 new 产生数组或者对象的语句所在的代码块之外，数组和对象本身占据的内存不会被释放，数组和对象在没有引用变量指向它的时候，才变为垃圾，不能在被使用，但仍然占据内存空间不放，在随后的一个不确定的时间被垃圾回收器收走(释放掉)。
+
+### 栈大小分配
+分配参数：-Xss
+特点：
+- 局部变量、参数都分配在栈上。
+- 栈的内存通常只有几百k，但是它决定了函数调用的深度；如果程序使用了很深的递归函数，而栈内存又非常小，此时很有可能发生栈溢出(java.lang.StackOverflowError)的情况。
+- 每一个线程都有独立的栈空间。如果想尽量多跑一些线程的话，就尽量将栈内存缩小，而不是增大。
+## 堆<->非堆
+按照官方的说法：“Java 虚拟机具有一个堆，堆是运行时数据区域，所有类实例和数组的内存均从此处分配。堆是在 Java 虚拟机启动时创建的。”“在JVM中堆之外的内存称为非堆内存(Non-heap memory)”。可以看出JVM主要管理两种类型的内存：堆和非堆。简单来说堆就是Java代码可及的内存，是留给开发人员使用的；非堆就是JVM留给 自己用的，所以方法区、JVM内部处理或优化所需的内存(如JIT编译后的代码缓存)、每个类结构(如运行时常数池、字段和方法数据)以及方法和构造方法 的代码都在非堆内存中。 
+
+Java 虚拟机管理堆之外的内存（称为非堆内存）。
+Java 虚拟机具有一个由所有线程共享的方法区。方法区属于非堆内存。它存储每个类结构，如运行时常数池、字段和方法数据，以及方法和构造方法的代码。它是在 Java 虚拟机启动时创建的。方法区在逻辑上属于堆，但 Java 虚拟机实现可以选择不对其进行回收或压缩。与堆类似，方法区的大小可以固定，也可以扩大和缩小。方法区的内存不需要是连续空间。除了方法区外，Java 虚拟机实现可能需要用于内部处理或优化的内存，这种内存也是非堆内存。例如，JIT 编译器需要内存来存储从 Java 虚拟机代码转换而来的本机代码，从而获得高性能。
+
+### 堆内存分配 
+JVM初始分配的内存由-Xms指定，默认是物理内存的1/64；JVM最大分配的内存由-Xmx指 定，默认是物理内存的1/4。默认空余堆内存小于40%时，JVM就会增大堆直到-Xmx的最大限制；空余堆内存大于70%时，JVM会减少堆直到 -Xms的最小限制。因此服务器一般设置-Xms、-Xmx相等以避免在每次GC 后调整堆的大小。 
+
+### 非堆内存分配 
+JVM使用-XX:PermSize设置非堆内存初始值，默认是物理内存的1/64；由XX:MaxPermSize设置最大非堆内存的大小，默认是物理内存的1/4。 
+
+
+## 内存设置参数
+
+设置项	| 说明 |
+:--:|:---|:--
+-Xms512m |	表示JVM初始分配的堆内存大小为512m（JVM Heap(堆内存)最小尺寸，初始分配）|
+-Xmx1024m |	JVM最大允许分配的堆内存大小为1024m，按需分配（JVM Heap(堆内存)最大允许的尺寸，按需分配）|
+-XX:PermSize=512M |	JVM初始分配的非堆内存|
+-XX:MaxPermSize=1024M |	JVM最大允许分配的非堆内存，按需分配|
+-XX:NewSize/-XX:MaxNewSize |	定义YOUNG段的尺寸，NewSize为JVM启动时YOUNG的内存大小；MaxNewSize为最大可占用的YOUNG内存大小。|
+-XX:SurvivorRatio |	设置YOUNG代中Survivor空间和Eden空间的比例 |
+-Xss128K |	设置栈大小 |
